aster/tests/pass/qualified_module.as
use core.io

def main() returns i32
    core.io.println("ok")
    return 0

