aster/tests/fail/unknown_ident.as
# Expected: compile failure (unknown identifier)

def main() returns i32
    return nope

